--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
+      <img src="assets/images/noise.png" class="noise"/>
     <header>
       <div class="hey"></div>
       <div class="cv">
