Add left section nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
       </div>
     </header>
     <main>
-      <div class="left"></div>
+      <div class="left">
+        <nav>
+            <ul>
+                <li class="file"><i class="nf nf-fa-circle_info"></i> about_me</li>
+                <li class="directory"><i class="nf nf-fa-music"></i> hobbies/</li>
+                <li class="file"><i class="nf nf-fa-code"></i> skills</li>
+                <li class="directory"><i class="nf nf-cod-project"></i> projects/</li>
+                <li class="directory"><i class="nf nf-md-contacts"></i> get_in_touch/</li>
+                <li class="file"><i class="nf nf-fa-face_smile"></i> credits</li>
+            </ul>
+        </nav>
+      </div>
       <div class="right"></div>
     </main>
     <footer></footer>
