--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-      <img src="assets/images/noise.png" class="noise"/>
+    <img src="assets/images/noise.png" class="noise" />
     <header>
       <div class="hey"></div>
       <div class="cv">
         <a href=""
           ><i class="nf nf-md-file_document"></i><br /><span
-            >Download CV</span
+            >CV</span
           ></a
         >
       </div>
@@ -23,19 +23,53 @@
     <main>
       <div class="left">
         <nav>
-            <ul>
-                <li class="file"><i class="nf nf-fa-circle_info"></i> about_me</li>
-                <li class="directory"><i class="nf nf-fa-music"></i> hobbies/</li>
-                <li class="file"><i class="nf nf-fa-code"></i> skills</li>
-                <li class="directory"><i class="nf nf-cod-project"></i> projects/</li>
-                <li class="directory"><i class="nf nf-md-contacts"></i> get_in_touch/</li>
-                <li class="file"><i class="nf nf-fa-face_smile"></i> credits</li>
-            </ul>
+          /
+          <ul>
+            <li class="file"><i class="nf nf-fa-circle_info"></i> about_me</li>
+            <li class="directory"><i class="nf nf-fa-music"></i> hobbies/</li>
+            <li class="file"><i class="nf nf-fa-code"></i> skills</li>
+            <li class="directory">
+              <i class="nf nf-cod-project"></i> projects/
+            </li>
+            <li class="directory">
+              <i class="nf nf-md-contacts"></i> get_in_touch/
+            </li>
+            <li class="file"><i class="nf nf-fa-face_smile"></i> credits</li>
+          </ul>
         </nav>
       </div>
-      <div class="right"></div>
+      <div class="right">
+        <div class="terminal">
+          <div class="prompt">
+            <div class="text">
+              <span class="bold red">╭─cryptosaiyan</span>
+              <span class="rosewater">in</span>
+              <span class="bold pink">/about_me</span><br />
+              <span class="bold"
+                ><span class="red">╰─λ</span
+                ><span class="blue"> cat</span></span
+              >
+              <span class="rosewater">about_me.txt</span>
+            </div>
+          </div>
+          <div class="content">
+            Hi! I'm an undergraduate student in Computer Science at IIT Dhanbad.
+            I'm passionate about cybersecurity, web development, and exploring
+            the deeper layers of computer science. When I'm not coding or diving
+            into tech, you'll probably find me reading a good book or immersed
+            in a great game. Oh, and yes — I use
+            <i class="nf nf-md-arch"></i> btw.
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <span class="yellow">--VISITING--</span>
+      <div>
+        <span class="white">-rwxr--r--</span>
+        <span class="white">/about_me</span>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
