--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <nav>
           /
           <ul>
-            <li class="file"><i class="nf nf-fa-circle_info"></i> about_me</li>
-            <li class="directory"><i class="nf nf-fa-music"></i> hobbies/</li>
-            <li class="file"><i class="nf nf-fa-code"></i> skills</li>
-            <li class="directory">
+            <li class="hover file active" id="about"><i class="nf nf-fa-circle_info"></i> about_me</li>
+            <li class="hover directory" id="hobbies"><i class="nf nf-fa-music"></i> hobbies/</li>
+            <li class="hover file" id="skills"><i class="nf nf-fa-code"></i> skills</li>
+            <li class="hover directory" id="projects">
               <i class="nf nf-cod-project"></i> projects/
             </li>
-            <li class="directory">
+            <li class="hover directory" id="contact">
               <i class="nf nf-md-contacts"></i> get_in_touch/
             </li>
-            <li class="file"><i class="nf nf-fa-face_smile"></i> credits</li>
+            <li class="hover file" id="credits"><i class="nf nf-fa-face_smile"></i> credits</li>
           </ul>
         </nav>
       </div>
