--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <nav>
           /
           <ul>
-            <li class="hover file active" id="about"><i class="nf nf-fa-circle_info"></i> about_me</li>
+            <li class="hover file" id="about_me"><i class="nf nf-fa-circle_info"></i> about_me</li>
             <li class="hover directory" id="hobbies"><i class="nf nf-fa-music"></i> hobbies/</li>
             <li class="hover file" id="skills"><i class="nf nf-fa-code"></i> skills</li>
             <li class="hover directory" id="projects">
               <i class="nf nf-cod-project"></i> projects/
             </li>
-            <li class="hover directory" id="contact">
+            <li class="hover directory" id="get_in_touch">
               <i class="nf nf-md-contacts"></i> get_in_touch/
             </li>
             <li class="hover file" id="credits"><i class="nf nf-fa-face_smile"></i> credits</li>
@@ -42,11 +42,11 @@
         <div class="terminal">
           <div class="prompt">
             <div class="text">
-              <span class="bold red">╭─cryptosaiyan</span>
+              <span class="bold red">╭-cryptosaiyan</span>
               <span class="rosewater">in</span>
               <span class="bold pink">/about_me</span><br />
               <span class="bold"
-                ><span class="red">╰─λ</span
+                ><span class="red">╰-λ</span
                 ><span class="blue"> cat</span></span
               >
               <span class="rosewater">about_me.txt</span>
