Make the noise active

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <img src="assets/images/noise.png" class="noise" />
+    <div class="noisecont">
+    </div>
     <header>
       <div class="hey"></div>
       <div class="cv">
         <a href=""
-          ><i class="nf nf-md-file_document"></i><br /><span
-            >CV</span
-          ></a
+          ><i class="nf nf-md-file_document"></i><br /><span>CV</span></a
         >
       </div>
     </header>
@@ -25,16 +24,24 @@
         <nav>
           /
           <ul>
-            <li class="hover file" id="about_me"><i class="nf nf-fa-circle_info"></i> about_me</li>
-            <li class="hover directory" id="hobbies"><i class="nf nf-fa-music"></i> hobbies/</li>
-            <li class="hover file" id="skills"><i class="nf nf-fa-code"></i> skills</li>
+            <li class="hover file" id="about_me">
+              <i class="nf nf-fa-circle_info"></i> about_me
+            </li>
+            <li class="hover directory" id="hobbies">
+              <i class="nf nf-fa-music"></i> hobbies/
+            </li>
+            <li class="hover file" id="skills">
+              <i class="nf nf-fa-code"></i> skills
+            </li>
             <li class="hover directory" id="projects">
               <i class="nf nf-cod-project"></i> projects/
             </li>
             <li class="hover directory" id="get_in_touch">
               <i class="nf nf-md-contacts"></i> get_in_touch/
             </li>
-            <li class="hover file" id="credits"><i class="nf nf-fa-face_smile"></i> credits</li>
+            <li class="hover file" id="credits">
+              <i class="nf nf-fa-face_smile"></i> credits
+            </li>
           </ul>
         </nav>
       </div>
