Make about_me and skills pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <div class="noisecont">
-    </div>
+    <div class="noisecont"></div>
     <header>
       <div class="hey"></div>
       <div class="cv">
@@ -27,16 +26,16 @@
             <li class="hover file" id="about_me">
               <i class="nf nf-fa-circle_info"></i> about_me
             </li>
-            <li class="hover directory" id="hobbies">
+            <li class="hover directory" id="hobbies/">
               <i class="nf nf-fa-music"></i> hobbies/
             </li>
             <li class="hover file" id="skills">
               <i class="nf nf-fa-code"></i> skills
             </li>
-            <li class="hover directory" id="projects">
+            <li class="hover directory" id="projects/">
               <i class="nf nf-cod-project"></i> projects/
             </li>
-            <li class="hover directory" id="get_in_touch">
+            <li class="hover directory" id="get_in_touch/">
               <i class="nf nf-md-contacts"></i> get_in_touch/
             </li>
             <li class="hover file" id="credits">
@@ -49,23 +48,18 @@
         <div class="terminal">
           <div class="prompt">
             <div class="text">
-              <span class="bold red">╭-cryptosaiyan</span>
+              <span class="bold red">╭─cryptosaiyan</span>
               <span class="rosewater">in</span>
               <span class="bold pink">/about_me</span><br />
               <span class="bold"
-                ><span class="red">╰-λ</span
+                ><span class="red">╰─λ</span
                 ><span class="blue"> cat</span></span
               >
               <span class="rosewater">about_me.txt</span>
             </div>
           </div>
           <div class="content">
-            Hi! I'm an undergraduate student in Computer Science at IIT Dhanbad.
-            I'm passionate about cybersecurity, web development, and exploring
-            the deeper layers of computer science. When I'm not coding or diving
-            into tech, you'll probably find me reading a good book or immersed
-            in a great game. Oh, and yes — I use
-            <i class="nf nf-md-arch"></i> btw.
+
           </div>
         </div>
       </div>
