Make basic projects structure

--- a/index.html
+++ b/index.html
@@ -46,19 +46,27 @@
       </div>
       <div class="right">
         <div class="terminal">
-          <div class="prompt">
-            <div class="text">
-              <span class="bold red">╭─cryptosaiyan</span>
-              <span class="rosewater">in</span>
-              <span class="bold pink">/about_me</span><br />
-              <span class="bold"
-                ><span class="red">╰─λ</span
-                ><span class="blue"> cat</span></span
-              >
-              <span class="rosewater">about_me.txt</span>
-            </div>
-          </div>
+          <div class="prompt"></div>
           <div class="content">
+            <div class="project">
+              <div class="group">
+                <div class="leftarr">&lt;</div>
+                <div class="projectimage">
+                  <img
+                    src="/assets/images/mindmeld.png"
+                    width="500px"
+                    alt="MindMeld"
+                  />
+                </div>
+                <div class="rightarr">&gt;</div>
+              </div>
+              <div class="projectname">
+                <a href="https://crypticsaiyan.github.io/Performance-Tracker/"
+                  >MindMeld</a
+                >
+                <div>Test your Cognitive skills through fun games!</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
