--- a/index.html
+++ b/index.html
@@ -47,27 +47,7 @@
       <div class="right">
         <div class="terminal">
           <div class="prompt"></div>
-          <div class="content">
-            <div class="project">
-              <div class="group">
-                <div class="leftarr">&lt;</div>
-                <div class="projectimage">
-                  <img
-                    src="/assets/images/mindmeld.png"
-                    width="500px"
-                    alt="MindMeld"
-                  />
-                </div>
-                <div class="rightarr">&gt;</div>
-              </div>
-              <div class="projectname">
-                <a href="https://crypticsaiyan.github.io/Performance-Tracker/"
-                  >MindMeld</a
-                >
-                <div>Test your Cognitive skills through fun games!</div>
-              </div>
-            </div>
-          </div>
+          <div class="content"></div>
         </div>
       </div>
     </main>
