Complete the Desktop Layout of website

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="css/colorPallete.css" />
     <link rel="stylesheet" href="css/common.css" />
   </head>
+
   <body>
     <div class="noisecont"></div>
     <header>
       <div class="hey"></div>
-      <div class="cv">
-        <a href=""
-          ><i class="nf nf-md-file_document"></i><br /><span>CV</span></a
-        >
+      <div class="instructions">
+        <pre class="bold rosewater" data-tooltip="Use arrow_keys/hjkl or mouse to navigate">
+     <i class="nf nf-fa-arrow_up_long"></i>
+     k
+<i class="nf nf-fa-arrow_left_long"></i> h   l <i class="nf nf-fa-arrow_right_long"></i>
+    j
+    <i class="nf nf-fa-arrow_down_long"></i>
+        </pre>
       </div>
     </header>
     <main>
