Add highlight keys function

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="hey"></div>
       <div class="instructions">
         <pre class="bold rosewater" data-tooltip="Use arrow_keys/hjkl or mouse to navigate">
-     <i class="nf nf-fa-arrow_up_long"></i>
-     k
-<i class="nf nf-fa-arrow_left_long"></i> h   l <i class="nf nf-fa-arrow_right_long"></i>
-    j
-    <i class="nf nf-fa-arrow_down_long"></i>
+     <i class="nf nf-fa-arrow_up_long upkey"></i>
+     <span class="upkey">k</span>
+<i class="nf nf-fa-arrow_left_long leftkey"></i> <span class="leftkey">h</span>   <span class="rightkey">l</span> <i class="nf nf-fa-arrow_right_long rightkey"></i>
+    <span class="downkey">j</span>
+    <i class="nf nf-fa-arrow_down_long downkey"></i>
         </pre>
       </div>
     </header>
