Make the site fully responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <header>
       <div class="hey"></div>
       <div class="instructions">
-        <pre class="bold rosewater" data-tooltip="Use arrow_keys/hjkl or mouse to navigate">
+        <pre
+          class="bold rosewater"
+          data-tooltip="Use arrow_keys/hjkl or mouse to navigate"
+        >
      <i class="nf nf-fa-arrow_up_long upkey"></i>
      <span class="upkey">k</span>
 <i class="nf nf-fa-arrow_left_long leftkey"></i> <span class="leftkey">h</span>   <span class="rightkey">l</span> <i class="nf nf-fa-arrow_right_long rightkey"></i>
@@ -56,6 +59,34 @@
         </div>
       </div>
     </main>
+    <div class="mobilenav">
+      <nav>
+       <div class="carleftarr"><</div> 
+        <div class="carousel-viewport">
+          <ul class="carousel">
+            <li class="mobhigh file" id="about_me">
+              <i class="nf nf-fa-circle_info"></i> about_me
+            </li>
+            <li class="mobhigh directory" id="hobbies/">
+              <i class="nf nf-fa-music"></i> hobbies/
+            </li>
+            <li class="mobhigh file" id="skills">
+              <i class="nf nf-fa-code"></i> skills
+            </li>
+            <li class="mobhigh directory" id="projects/">
+              <i class="nf nf-cod-project"></i> projects/
+            </li>
+            <li class="mobhigh directory" id="get_in_touch/">
+              <i class="nf nf-md-contacts"></i> get_in_touch/
+            </li>
+            <li class="mobhigh file" id="credits">
+              <i class="nf nf-fa-face_smile"></i> credits
+            </li>
+          </ul>
+        </div>
+        <div class="carrightarr">></div>
+      </nav>
+    </div>
     <footer>
       <span class="yellow">--VISITING--</span>
       <div>
