Complete the website

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </main>
     <div class="mobilenav">
-      <nav>
+      <div class="nav">
        <div class="carleftarr"><</div> 
         <div class="carousel-viewport">
           <ul class="carousel">
@@ -85,7 +85,7 @@
           </ul>
         </div>
         <div class="carrightarr">></div>
-      </nav>
+      </div>
     </div>
     <footer>
       <span class="yellow">--VISITING--</span>
