--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/colorPallete.css" />
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/cursor.css" />
   </head>
 
   <body>
+    <div class="cursor"></div>
     <div class="noisecont"></div>
     <header>
       <div class="hey"></div>
@@ -95,5 +97,6 @@
       </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/cursor.js"></script>
   </body>
 </html>
