--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="css/colorPallete.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/cursor.css" />
+    <link rel="stylesheet" href="css/orientation.css" />
   </head>
 
   <body>
+    <div class="landscape-warning">
+      <p>Please switch to portrait mode</p>
+      <p>for the best experience</p>
+    </div>
     <div class="cursor"></div>
     <div class="noisecont"></div>
     <header>
@@ -63,7 +68,7 @@
     </main>
     <div class="mobilenav">
       <div class="nav">
-       <div class="carleftarr"><</div> 
+        <div class="carleftarr"><</div>
         <div class="carousel-viewport">
           <ul class="carousel">
             <li class="mobhigh file" id="about_me">
