--- a/index.html
+++ b/index.html
@@ -107,5 +107,6 @@
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/cursor.js"></script>
+    <script src="scripts/swipe.js"></script>
   </body>
 </html>
