--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
     <div class="mobilenav">
       <div class="nav">
-        <div class="carleftarr"><</div>
+        <div class="carleftarr">&lt;</div>
         <div class="carousel-viewport">
           <ul class="carousel">
             <li class="mobhigh file" id="about_me">
@@ -95,7 +95,7 @@
             </li>
           </ul>
         </div>
-        <div class="carrightarr">></div>
+        <div class="carrightarr">&gt;</div>
       </div>
     </div>
     <footer>
